# Weather-Shap-MCP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/: mcp.json
weather_mcp/: __init__.py  model.py  open_meteo.py  scoring.py  server.py  visualize.py
